# rise-of-ai-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: autonomous_task.py
src/: __init__.py
src/agent/: __init__.py  __main__.py  core.py  executor.py  models.py  planner.py  verifier.py
src/safety/: __init__.py  audit.py  guardrails.py
src/tools/: __init__.py  base.py  code_executor_tool.py  filesystem_tool.py  github_tool.py  web_search_tool.py
tests/: test_core.py  test_safety.py  test_tools.py
