[project]
name = "rise-of-ai-agents"
version = "0.1.0"
description = "Production-grade autonomous AI agent framework with MCP tool integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mgnlia" }]

dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
    "rich>=13.7,<14",
    "openai>=1.30,<2",
    "jsonschema>=4.21,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
agent = "agent.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
